# wallabag_api_proxy

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  check_config.py  config.py  main.py  pyproject.toml  test_api.sh  test_service.py
api/: routes.py
core/: auth.py  client.py
utils/: exceptions.py  helpers.py
